--- a/phase3_final_analysis.ipynb
+++ b/phase3_final_analysis.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "- Mahir: Data extraction, cleaning, and preprocessing, intiial sentiment analysis\n",
     "- Anuj: Video categorization using LLM\n",
-    "- Sungha: Virality score calculation\n",
+    "- Sungha: Virality score calculation and content virality analysis\n",
     "- Megan: Transcript and comment sentiment analysis"
    ]
   },
